williamkwek-developer-finalexercise/rancher-demo.yaml
apiVersion: v1
kind: Service
metadata:
  name: rancher-demo
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 8080
  selector:
    app: rancher-demo
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rancher-demo
spec:
  replicas: 3
  selector:
    matchLabels:
      app: rancher-demo
  template:
    metadata:
      labels:
        app: rancher-demo
    spec:
      containers:
      - name: hello-ingress
        image: monachus/rancher-demo
        ports:
        - containerPort: 8080
