williamkwek-developer-finalexercise/my-new-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: my-new-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  tls:
  - hosts:
      - demo.yinpok.com
    secretName : ssl-cert-production
  rules:
  - host: demo.yinpok.com
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: rancher-demo
            port:
              number: 8080
